--- a/src/test/resources/jcrontab.web.properties
+++ b/src/test/resources/jcrontab.web.properties
@@ -25,7 +25,7 @@ org.jcrontab.Crontab.refreshFrequency = 3
 #org.jcrontab.data.datasource = org.jcrontab.data.GenericSQLSource
 #org.jcrontab.data.GenericSQLSource.dbDataSource=yourDS
 # Those lines are necesary to send mail
-#org.jcrontab.sendMail.to=iolalla@yahoo.com
+#org.jcrontab.sendMail.to=iolalla@gmail.com
 #org.jcrontab.sendMail.from=jcrontab@yoursystem.com
 #org.jcrontab.sendMail.smtp.host=smtp.yahoo.com
 #org.jcrontab.sendMail.smtp.user= yourSMTPusername
